--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=rye
 
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=${MYSQL_URL}/net_tech
+spring.datasource.url=${MYSQL_URL}/rye
 spring.datasource.username=${MYSQL_USER}
 spring.datasource.password=${MYSQL_PASSWORD}
 
