--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=${MYSQL_URL}/rye
 spring.datasource.username=${MYSQL_USER}
 spring.datasource.password=${MYSQL_PASSWORD}
-
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.show-sql: true
+jwt.token.key=jwdkakwdahwfawnfawkcahvbavjnawkfbakjwdjanxjahwdawddwadawd
