Results update and Statistics implementation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.datasource.password=${MYSQL_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.show-sql: true
 jwt.token.key=jwdkakwdahwfawnfawkcahvbavjnawkfbakjwdjanxjahwdawddwadawd
+aws.url=https://5oppbmsn7i.execute-api.eu-north-1.amazonaws.com/dev/detect-emotion/
