--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,6 @@ spring.datasource.password=${MYSQL_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.show-sql: true
 jwt.token.key=jwdkakwdahwfawnfawkcahvbavjnawkfbakjwdjanxjahwdawddwadawd
+
+aws.recognize.url=https://5oppbmsn7i.execute-api.eu-north-1.amazonaws.com/dev/detect-emotion
 aws.db.url=https://w1m8szuijj.execute-api.eu-north-1.amazonaws.com/dev/get-random
