--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,16 @@
             <artifactId>spring-data-jpa</artifactId>
             <version>3.2.3</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
